[project]
name = "python-api-gateway"
version = "0.1.0"
description = "Python API gateway with smart routing and throttling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aioredis>=2.0.1",
    "fastapi>=0.124.4",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "redis>=7.1.0",
]
