[project]
name = "python-api-gateway"
version = "0.1.0"
description = "Python API gateway with smart routing and throttling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aioredis>=2.0.1",
    "asgi-lifespan>=2.1.0",
    "fastapi>=0.124.4",
    "httpx>=0.28.1",
    "iniconfig>=2.3.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "redis>=7.1.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "-q"]
testpaths = [
    "tests/",
]
asyncio_mode = "auto"
